# MetaProgrammingShenanigans

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/stbuffer/: stbuffer.hpp
test/: test_main.cpp
test/stbuffer/: test_stbuffers.cpp
